# DreamMachine

./: .gitmodules  DreamMachine.py  DreamMachine_server.py  README.md  mainwindow.cpp  mainwindow.h
.github/workflows/: ios.yml  linux.yml  macos.yml  windows.yml
client/: CMakeLists.txt  DreamMachine.pro  mainwindow.cpp  qml.qrc
client/platform/ios/: Info.plist
client/qml/: AdvancedPage.qml  DMButton.qml  DMCard.qml  DMSlider.qml  DMSpinBox.qml  DMTextArea.qml  DMTextField.qml  Main.qml  SimplePage.qml
client/qml/components/: DMButton.qml  DMCard.qml  DMComboBox.qml  DMFullscreenImageViewer.qml  DMMainChrome.qml  DMPreviewChrome.qml  DMSlider.qml  DMSpinBox.qml  DMTextArea.qml  DMTextField.qml  DMTheme.js
client/qml/components/themes/: forest.js  graphite.js  ocean.js  rose.js  sunset.js
client/src/: image_service.cpp  image_service.h  inference_client.cpp  inference_client.h  inference_types.h  ios_photo_library.h  ios_photo_library_ios.mm  ios_photo_library_stub.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_images.cpp  mainwindow_inference.cpp  mainwindow_preset.cpp  mainwindow_ui.cpp  mainwindow_utils.cpp  mainwindow_utils.h  mobile_view_model.cpp  mobile_view_model.h  preset_storage.cpp  preset_storage.h  settings_mapper.cpp  settings_mapper.h
client/src/util/: globalsetting.cpp
server/: DreamMachine_server.py
